--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
+    "mongoose": "^9.1.3",
     "next": "16.1.1",
     "pdf2json": "^4.0.1",
     "react": "19.2.3",
